Dashboard and Timechart Fix (#592)
* Dashboard JSON copy btn style update

* Query Language Dropdown Fix

* Fix : 'Save' & 'Apply' for Black Panel

* Fix : View Option for Blank Panel

* Fix: Resize Function Restricted to Dashboard Screen, excluding Edit Panel Screen

* Resize of charts on Edit Panel Screen

* Fix

* Fix : Timechart

* Cleanup

* Display Chart When Open Edit Panel Screen

* Cleanup

* Org Screen CSS Fix

--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -551,10 +551,6 @@
   background: var(--btn-hover-or-click-bg-color) !important;
 }
 
-.panEdit-btn {
-  color: black !important;
-}
-
 .panelEditor-container {
   display: flex;
   flex-direction: row;
@@ -710,19 +706,19 @@
 .big-number-display-container {
   display: flex;
   justify-content: center;
-  align-items: flex-end;
-  height: fit-content !important;
-  width: fit-content !important;
+  align-items: center;
   background-color: var(--datatable-bg-color);
   border-radius: 5px;
+  height: 100%;
+  width: 100%;
 }
 
 .big-number {
   display: flex;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
   color: var(--orange-1);
-  font-size: 8.5em;
+  font-size: 8vmax;
   font-weight: 500;
   color: var(--number-and-unit-color);
 }
@@ -775,10 +771,6 @@
   align-items: center;
   width: 90%;
   margin-top: 1rem;
-}
-
-#dbSet-save{
-  width: 80px;
 }
 
 .dbSet-goToDB {
@@ -1051,7 +1043,7 @@
 .dbSet-name,.dbSet-heading{
   white-space: nowrap;
   font-weight: 500;
-  font-size: 22px;
+  font-size: 18px;
 }
 
 #metrics-query-language-btn{
@@ -1396,4 +1388,9 @@ input:checked + .slider:before {
   text-overflow: ellipsis;
   max-width: 150px;
   vertical-align: bottom;
+}
+#dbSet-discard, #dbSet-save{
+  background: var(--myOrg-input);
+  color: var(--text-color);
+  width: 100px;
 }
