--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -2367,6 +2367,7 @@ input[type="submit" i] {
 #cstats-app-container .dropdown-menu.daterangepicker.show{
     height: auto !important;
     width: 300px !important;
+    padding: 8px;
 }
 
 #daterangepicker.active{
@@ -2378,12 +2379,12 @@ input[type="submit" i] {
 }
 
 .dt-header {
-    margin-left: 12px;
-    margin-top: 9px;
-
+    margin-bottom: 8px;
+    margin-left: 10px;
+    margin-top: 8px;
     font-weight: var(--fw-500);
     font-style: normal;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 23px;
     color: var(--timepicker-dt-hdr-color);
 }
