--- a/static/css/tracing.css
+++ b/static/css/tracing.css
@@ -521,6 +521,14 @@ input.form-control {
     font-size: 13px;
 }
 
+.tooltip-design {
+    color: var(--text-color) !important;
+    background-color: var(--bg-color) !important;
+    padding: 5px !important;
+    border-radius: 5px !important;
+    font-size: 13px !important;
+}
+
 circle:hover{
     cursor: pointer;
 }
