--- a/static/css/query-builder.css
+++ b/static/css/query-builder.css
@@ -285,6 +285,10 @@ input.form-control {
     color: var(--text-color);
 }
 
+.ui-menu.ui-widget.ui-widget-content.ui-autocomplete.ui-front{
+    width: max-content!important;
+}
+
 .ui-tabs-tab {
     border-radius: 10px;
 }
