Feat: Add Clear Button to Reset Query Builder (#549) * Added a small "X" at the end of the search box in the query builder. This X works similarly to what we already have in the Free Text tab, allowing users to quickly clear their query and start over. * This button also works in Dark Mode.

--- a/static/css/query-builder.css
+++ b/static/css/query-builder.css
@@ -708,7 +708,7 @@ div.show-record-popup {
 
     /* Button appearance */
     background-color: transparent;
-    color: rgba(0, 0, 0, 0.6); /* Lighter font color */
+    color: rgb(111, 108, 123); /* R111 G108 B123 */
     font-family: "DINpro", Arial, sans-serif;
     font-weight: lighter;
     font-size: 20px;
