select-unselect header fixed

--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -2110,6 +2110,7 @@ div.dts div.dataTables_scrollBody table {
     margin-left: 11px;
     display: flex;
     align-items: center;
+    width:max-content;
 }
 
 .select-unselect-checkbox {
