--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -3919,7 +3919,7 @@ color: #C8C7CC;
     background-color: var(--purple-1);
     border: none;
     color: var(--white) !important;
-    height: 44px;
+    height: 36px;
     width: 100%;
     border-radius: 5px;
     margin-top: 8px;
@@ -3943,7 +3943,7 @@ color: #C8C7CC;
   width: 185px;
   position: absolute;
   top: 50%;
-  left: 0;
+  left: 30px;
   background: var(--black-4);
 }
 
@@ -3955,7 +3955,17 @@ color: #C8C7CC;
   display: block;
   position: absolute;
   top: 50%;
-  right: 0;
+  right: 30px;
+}
+
+#login-error-message {
+    background-color: rgba(224, 104, 124, 0.5);
+    border-top: 4px solid rgb(224 104 125 / 1);
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    display: none;
+    font-weight: 600;
 }
 
 #login-form {
@@ -4001,7 +4011,7 @@ color: #C8C7CC;
     background: #262038;
     border-radius: 5px;
     text-decoration: none;
-    height: 44px;
+    height: 36px;
     width: 100%;
     margin-bottom: 15px;
     font-size: 14px;
