--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -890,6 +890,7 @@ input.form-control {
     border-radius: 5px;
     transition: none;
     box-shadow: none !important;
+    padding-right: 2rem !important;
 }
 
 input.form-control:focus {
