--- a/static/css/tracing.css
+++ b/static/css/tracing.css
@@ -81,13 +81,13 @@
 }
 
 /* Dependency Graph */
-#dependency-graph-container,#error-msg-container {
+#dependency-graph-container,#error-msg-container,#dependency-graph-canvas {
     margin-top: 20px;
     height: 100%; 
     width: 100%;
 }
 
-#dependency-graph-container svg ,#error-msg-container{
+#dependency-graph-container ,#error-msg-container{
     width: 100%;
     height: 100%;
     box-shadow: var(--box-shadow);
@@ -104,29 +104,6 @@
     color: var(--empty-response-text-color);
     margin: auto ;
     margin-top: 50px;
-}
-
-#arrowhead path {
-    fill: var(--graph-link);
-    stroke: none;
-}
-
-.line {
-    stroke: var(--graph-link);
-    stroke-width: 1.2;
-}
-
-.label {
-    text-anchor: end;
-    fill: var(--graph-link);
-    font-size: 16px;
-}
-
-.link-label {
-    text-anchor: middle;
-    fill: var(--link-label);
-    font-weight: bold;
-    font-size: 16px;
 }
 
 /* Service Health  */
