Add Loading Indicator for Scrolling on Logs Screen (#695)
* Loading Icon

* Added Loading Text

--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -5161,3 +5161,36 @@ input.form-control {
     height: 12px;
     top: 9px;
 }
+
+.loading-icon {
+    display: block;
+    width: 50px;
+    height: 50px;
+    border: 8px solid #B4A6E6;
+    border-top: 8px solid #6347D9;
+    border-radius: 50%;
+    animation: spin 2s linear infinite;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 99;
+}
+
+@keyframes spin {
+    0% { transform: translate(-50%, -50%) rotate(0deg); }
+    100% { transform: translate(-50%, -50%) rotate(360deg); }
+}
+
+.ag-overlay-loading-center{
+    position: relative;
+}
+
+.loading-text{
+    position: absolute;
+    font-weight: 600;
+    top: 20px;
+    left: -36px;
+    background-color: var(--bg-color);
+    padding: 8px;
+}
