Fix: issue #573 is now fixed, text and icon are not getting clashed. Included Clear input button

--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -3169,6 +3169,8 @@ float: right;
 }
 
 .search-db-input,.metrics-input{
+    padding-left: 1rem;
+    padding-right: 4.4rem;
     height: 32px;
 }
 
