--- a/static/css/tracing.css
+++ b/static/css/tracing.css
@@ -538,5 +538,12 @@ circle:hover{
     padding: 8px !important;
 }
 .subsection-navbar .inner-range{
-    grid-template-columns: repeat(2, 1fr) !important;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.dep {
+    height: auto !important;
+}
+.dep{
+    grid-template-columns: repeat(3, 1fr) !important;
 }
