Open Trace In New Tab

--- a/static/css/tracing.css
+++ b/static/css/tracing.css
@@ -369,6 +369,11 @@ input.form-control {
     height: 124px;
     margin-top: 20px;
     cursor: pointer;
+    color: var(--text-color);
+}
+
+a.warn-box-anchor {
+    text-decoration: none;
 }
 
 .error-span,
