--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -2749,10 +2749,25 @@ input[type="date"]::-webkit-calendar-picker-indicator , input[type="time"]::-web
 .odd-popup-textarea{
     background: var(--datatable-odd-row-bg-color) !important;
     color: var(--text-color) !important;
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+    box-sizing: border-box;
+    overflow: auto;
+    font-size: 12px;
 }
+
 .even-popup-textarea{
     background: var(--datatable-even-row-bg-color) !important;
     color: var(--text-color) !important;
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+    box-sizing: border-box;
+    overflow: auto;
+    font-size: 12px;
 }
 
 .fa-sort-alpha-up:before{
