feat: added time picker in dependency graph (#711)

--- a/static/css/tracing.css
+++ b/static/css/tracing.css
@@ -538,3 +538,18 @@ a.warn-box-anchor {
 circle:hover{
     cursor: pointer;
 }
+
+.subsection-navbar .dropdown-menu.daterangepicker.show{
+    height: 162px !important;
+    padding: 8px !important;
+}
+.subsection-navbar .inner-range{
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.dep {
+    height: auto !important;
+}
+.dep{
+    grid-template-columns: repeat(3, 1fr) !important;
+}
