--- a/static/css/tracing.css
+++ b/static/css/tracing.css
@@ -544,22 +544,9 @@ a.warn-box-anchor {
 circle:hover{
     cursor: pointer;
 }
-
-.subsection-navbar .dropdown-menu.daterangepicker.show{
-    height: 162px !important;
-    padding: 8px !important;
+.dropdown-menu.daterangepicker.dep.show {
+    height: 160px !important;
 }
-.subsection-navbar .inner-range{
-    grid-template-columns: repeat(2, 1fr);
-}
-
-.dep {
-    height: auto !important;
-}
-.dep{
-    grid-template-columns: repeat(3, 1fr) !important;
-}
-
 .span-details-container{
     margin-top: 14px;
     box-shadow: var(--box-shadow);
