--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -3558,6 +3558,12 @@ float: right;
     justify-content: center;
     border-radius: 5px;
     font-size: 14px !important;
+    height: 100%;
+    background-size: cover;
+    background-color: var(--purple-1);
+    border-radius: 5px;
+    color: white;
+    margin-left: 10px;
 }
 
 .inviteBtn:disabled, #del-org-btn:disabled, #del-index-btn:disabled {
@@ -3579,6 +3585,7 @@ float: right;
     display: flex;
     justify-content: space-between;
     align-items: baseline;
+    margin: 0px 20px 10px 20px;
 }
 
 #inviteForm {
@@ -3588,9 +3595,8 @@ float: right;
 }
 
 .users-data-table {
-    height: 90%;
+    height: 100%;
     width: 100%;
-    margin-top: 8px;
 }
 
 .myOrg #panelLogResultsGrid{
@@ -3632,7 +3638,17 @@ float: right;
     font-size: 14px;
     margin-bottom: 5px;
 }
-
+#invite-user-role{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid var(--myOrg-dropdown-border-color);
+    height: 32px;
+}
+#invite-user-role,.invite-role-options{
+    min-width: 120px !important;
+    width: 120px !important;
+}
 .myOrg .role-inner-dropdown{
     line-height: 28px;
     border-radius: 5px;
@@ -3644,11 +3660,12 @@ float: right;
     justify-content: space-between;
     align-items: center;
     color: var(--table-or-regular-text-color);
-    position: relative;
+    margin-top: 4px;
+    cursor: pointer;
 }
 
 
-.myOrg .dropdown-option {
+.myOrg .dropdown-option,.invite-role-options {
     background: var(--myOrg-dropdown-options-bg);
     z-index: 99;
     position: relative;
@@ -3660,11 +3677,12 @@ float: right;
     color: var(--table-or-regular-text-color);
 }
 
-.myOrg .dropdown-option li {
+.myOrg .dropdown-option li, .invite-role-options li {
     padding: 5px;
     border-radius: 5px;
     margin-top: 7px;
     background: var(--myOrg-dropdown-bg);
+    cursor: pointer;
 }
 
 .myOrg .dropdown-option{
@@ -3674,14 +3692,14 @@ float: right;
 .myOrg .dropdown-option.active{
     visibility: visible;
 }
-
-.myOrg .dropdown-option li:hover{  
-    background: #6347D9;
-    color: #fff;
+.myOrg .dropdown-option li:hover,.invite-role-options li:hover{
+    background: var(--index-drop-down-item-hover-bg-color);
+    color: var(--index-drop-down-item-hover-text-color);
 }
 
-.arrow-btn {
-    display: none;
+.invite-role-options li.active, .roles.selected{  
+    background: var(--index-drop-down-item-active-bg-color) !important;
+    color: var(--index-drop-down-item-active-text-color) !important;
 }
 
 .myOrg .ag-cell{
@@ -3701,6 +3719,7 @@ float: right;
 
 #receiverEmail {
     width: 407px;
+    border: 1px solid var(--myOrg-dropdown-border-color);
 }
 
 .myOrgScreen .ag-root-wrapper {
@@ -4605,7 +4624,7 @@ color: #C8C7CC;
     margin-left: 20px;
 }
 
-#ag-grid .ag-row:hover {
+#alerting #ag-grid .ag-row:hover {
     background: var(--datatable-even-row-bg-color);
     cursor: pointer;
 }
@@ -4808,7 +4827,7 @@ color: #C8C7CC;
     right: 20px;
 } 
 
-#alerting #ag-grid{
+#alerting #ag-grid, .users-data-table #ag-grid{
     border: 1px solid var(--search-input-border);
     box-shadow: var(--box-shadow);
     border-radius: 5px;
@@ -4819,7 +4838,7 @@ color: #C8C7CC;
   background-color: var(--alerting-table-bg-color);
 }
 
-#alerting .ag-row-position-absolute::after{
+#alerting .ag-row-position-absolute::after,.myOrg-inner-container .ag-row-position-absolute::after{
   content: '';
   position: absolute;
   left: 10px;
