--- a/static/css/query-builder.css
+++ b/static/css/query-builder.css
@@ -376,7 +376,7 @@ input.form-control {
     position: absolute;
     right: 28px;
     top: 10px;
-    width: 358px;
+    width: 398px;
 }
 
 .tab-li {
@@ -442,7 +442,9 @@ a:visited.ui-button,
 }
 
 #index-btn {
-    width: 89px;
+    width: 119px;
+    padding: 10px;
+    justify-content: space-between;
 }
 
 .completed,
