--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -836,9 +836,6 @@ body {
     transform: rotate(180deg);
 }
 
-#available-indexes {
-    width: 300px;
-}
 #associated-alerts {
     width: 300px;
 }
@@ -1673,6 +1670,7 @@ div.dts div.dataTables_scrollBody table {
     background: var(--index-drop-down-box-bg-color);
     overflow: scroll;
     border: 1px solid var(--timepicker-border-color);
+    padding: 0px;
 }
 #associated-alerts {
     width: 265px;
@@ -2944,16 +2942,13 @@ float: right;
 
 /*dashboard*/
 #new-dashboard{
-    padding-left: 10px;
     overflow-x: hidden;
-    overflow-y: hidden;
-    margin-bottom: 12px;
     font-size: 20px;
     color: var(--cstats-header-text-color);
     font-weight: var(--fw-500) !important;
     font-family: "DINpro", Arial, sans-serif;
     font-style: normal;
-    margin: 20px;
+    padding: 20px;
     margin-left: 0;
     display: flex;
     flex-direction: column;
@@ -2964,8 +2959,8 @@ float: right;
 #new-dashboard .header-container{
     display: flex;
     justify-content: space-between;
-    height: 45px;
-    align-items: center;
+    height: 35px;
+    align-items: self-start;
     width: 100%;
 }
 
@@ -3032,7 +3027,6 @@ float: right;
     width: 100%;
     height: 100%;
     position: relative;
-    padding: 0.5em 0; 
     padding-left: 0px;
 }
 
